# uku

./: .gitignore  Cargo.toml  Dockerfile  README.md
cli/src/: auth.rs  data_processing.rs  main.rs  visualization.rs
cli/src/api/: github.rs
cli/tests/: auth_tests.rs  visualization_tests.rs
scripts/: setup.sh
src/: suggestions.rs  utils.rs
src/api/: bitbucket.rs  gitlab.rs
tests/: api_tests.rs  data_processing_tests.rs
uku-app/: package-lock.json  package.json  tailwind.config.js
uku-app/app/: globals.css  layout.tsx  page.tsx
uku-app/app/auth/: page.tsx
uku-app/app/settings/: page.tsx
uku-app/components/: footer.tsx  header.tsx  issues-list.tsx  loading-spinner.tsx
uku-app/lib/: api.ts
web/: Dockerfile  server.js
web/controllers/: contributionsController.js  issuesController.js
web/routes/: issues.js
web/services/: contributionsService.js  gitlab.js
web/uku-app/: next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js
web/uku-app/app/: globals.css
web/uku-app/app/auth/: page.tsx
web/uku-app/components/: badges-list.tsx  contribution-graph.tsx  stats-cards.tsx  theme-toggle.tsx
web/uku-backend/routes/: contributions.js
web/uku-backend/services/: bitbucket.js  github.js  issuesService.js
