[package]
name = "uku"
version = "1.0.0"
edition = "2024"
authors = ["Gabriel Ong"]
description = "Unified open source contribution tracker for GitHub, GitLab, and Bitbucket"
license = "MIT"

[dependencies]
clap = "2.34"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
chrono = "0.4"
